[package]
name = "server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde = {  version = "1.0.228", features = ["derive"] }
structopt = "0.3.26"
tokio = {  version = "1.47.1" , features = ["full"] }
toml = "0.9.7"
regex = "1"
pnet_datalink = "0.34"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
