[package]
name = "server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
test = true

[dependencies]
serde = {  version = "1.0.228", features = ["derive"] }
tokio = {  version = "1.47.1" , features = ["full"] }
structopt = "0.3.26"
toml = "0.9.7"
regex = "1"
pnet_datalink = "0.34"
bytes = "1.10.1"
lexical-core = "0.8"
chrono = "0.4"
async-trait = "0.1.89"
bitflags = "1.3.2"
notify = { version = "8.2.0" , features = ["serde"]}
xxhash-rust = {  version = "0.8.15", features = ["xxh64"] }
fs2 = "0.4.3"
rand = "0.10.0-rc.0"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
serial_test = "3"
